# ----------------------------------------------------------------------------------
# Project: Beamtime-Server
# File: pyproject.toml
# ----------------------------------------------------------------------------------
# Purpose: 
# This file is used to specify the project configuration and dependencies.
# ----------------------------------------------------------------------------------
# Author: Christofanis Skordas
#
# Copyright (c) 2025 GSECARS, The University of Chicago, USA
# Copyright (c) 2025 NSF SEES, USA
# ----------------------------------------------------------------------------------

[project]
name = "beamtime-server"
version = "0.1.1"
description = "Backend server for the beamtime application. It is used to create experiment folders, DOIs and cloud links (Globus/Nextcloud) for experiment data."
readme = "README.md"
authors = [
    { name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com" }
]
maintainers = [
    { name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com" }
]
requires-python = "==3.13.*"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "pydantic>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/seescience/beamtime-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]
line-length = 160
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
